Fixing header on mobile and extra text

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -54,9 +54,10 @@ header {
 			}
 			@media @mobile {
 				display: block;
-				float: none;
+				margin: 0;
 				overflow: auto;
-				width: 100%;
+				text-align: left;
+				max-width: 80%;
 			}
 		}
 		.navbar-toggle {
@@ -137,6 +138,7 @@ header {
 				border-bottom: 1px solid @gray-light;
 				display: block;
 				float: none;
+				overflow: auto;
 				&:last-child {
 					border: 0;
 				}
